# libxosd-xft

./: .gitignore  AUTHORS  COPYING.LESSER  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  autobuild.sh  configure  configure.ac  xosd-xft.pc.in
archlinux/: PKGBUILD
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
man/: Makefile.am  Makefile.in  osd-cat.1  osd-demo.1  osd-echo.1  osd-echo.1.md  osd-show-key.1  osd-show-key.1.md  osd_parse_geometry.3  xosd-xft.3  xosd-xft.3.md
src/: Makefile.am  Makefile.in  nerdfonts.c  osd-demo.c  osd-echo.c  osd-example.c  osd-show-file.c  osd-show-key.c  utf8.c  xosd-xft.h
src/libxosd-xft/: Makefile.am  Makefile.in  geometry.c  intern.h  monitors.c  xosd-xft.c
